--- a/doc/api_project.json
+++ b/doc/api_project.json
@@ -1,13 +1,13 @@
 {
-  "name": "psw-server",
+  "name": "ico-server",
   "version": "1.0.0",
-  "description": "Pink salt works Server",
+  "description": "",
   "sampleUrl": false,
   "defaultVersion": "0.0.0",
   "apidoc": "0.3.0",
   "generator": {
     "name": "apidoc",
-    "time": "2019-02-06T10:31:56.324Z",
+    "time": "2019-02-11T06:35:34.675Z",
     "url": "http://apidocjs.com",
     "version": "0.17.7"
   }
